--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,7 @@
 @import "~normalize.css";
 
-@import "_variables";
-@import "modules/hello.scss";
-
 body {
-  background: $wtf;
+  background: black;
   color: #fff;
   display: flex;
   align-items: center;
